# orbly

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.inject.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: child-webviews.json  default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: darkmode-inject.js
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/adblock/: content_rules.rs  engine.rs  filter_lists.rs  mod.rs
src-tauri/src/app_manager/: certificate.rs  lifecycle.rs  mod.rs  session_state.rs  state.rs
src-tauri/src/commands/: adblock_commands.rs  app_lifecycle_commands.rs  audio_commands.rs  config_commands.rs  darkmode_commands.rs  download_commands.rs  favicon_commands.rs  find_commands.rs  link_routing_commands.rs  mod.rs  native_integration_commands.rs  recipe_commands.rs  resource_commands.rs  tray_commands.rs  useragent_commands.rs  workspace_commands.rs  zoom_commands.rs
src-tauri/src/config/: defaults.rs  icloud.rs  manager.rs  mod.rs  models.rs
src-tauri/src/darkmode/: mod.rs
src-tauri/src/downloads/: manager.rs  mod.rs
src-tauri/src/notifications/: badge_scripts.rs  handler.rs  mod.rs  scripts.rs
src-tauri/src/recipes/: mod.rs
src-tauri/src/resource_monitor/: mod.rs  poller.rs
src-tauri/src/tray/: mod.rs
src/injected/: darkmode-inject.ts
src/lib/: defaultShortcuts.ts  events.ts  fuzzySearch.ts  ipc.ts  serviceTemplates.ts  shortcuts.ts  stateSync.ts  themeManager.ts
src/stores/: mockData.ts  uiStore.ts
(+53 files in other folders)
