[package]
name = "orbly"
version = "0.1.0"
description = "A lightweight, privacy-respecting multi-app workspace manager"
authors = ["Orbly"]
edition = "2021"

[lib]
name = "orbly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon", "macos-proxy"] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
url = "2.5"
glob = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
dirs = "6"
adblock = { version = "0.12", default-features = false, features = ["content-blocking", "css-validation", "embedded-domain-resolver"] }
open = "5"
shellexpand = "3"
sysinfo = "0.33"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
